--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
       This project was coded with love by
       <a href="https://github.com/SonjaCodes" target="_blank">Sonja Kolmer</a>
       and is
-      <a
-        href="https://github.com/SonjaCodes/SonjaCodes-Challenge-Week6"
-        target="_blank"
+      <a href="https://github.com/SonjaCodes/meteo" target="_blank"
         >on Github</a
       >
       and
-      <a href="https://curious-pudding-efa777.netlify.app" target="_blank"
+      <a href="https://sonjacodesmeteoapp.netlify.app/" target="_blank"
         >hosted on Netlify</a
       >
     </footer>
