--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
     <title>Meteo App</title>
   </head>
   <body>
-    <h1>Welcome to the Meteo App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Zurich</h1>
+        <p>
+          Sunday 00:13, mostly sunny
+          <br />
+          Humidity: 49%, Wind: 5km/h SW
+        </p>
+      </div>
+      <div>☀️ 17°C</div>
+    </main>
     <footer>
       This project was coded with love by
       <a href="https://github.com/SonjaCodes" target="_blank">Sonja Kolmer</a>
