--- a/index.html
+++ b/index.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" href="src/style.css" />
-    <title>Meteo App</title>
-  </head>
-  <body>
-    <div class="weather-app">
-      <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." required />
-          <input type="submit" value="search" />
-        </form>
-      </header>
-      <main>
-        <div>
-          <h1>Zurich</h1>
-          <p>
-            Sunday 00:13, mostly sunny
-            <br />
-            Humidity: 49%, Wind: 5km/h SW
-          </p>
-        </div>
-        <div>☀️ 17°C</div>
-      </main>
-      <footer>
-        This project was coded with love by
-        <a href="https://github.com/SonjaCodes" target="_blank">Sonja Kolmer</a>
-        and is
-        <a href="https://github.com/SonjaCodes/meteo" target="_blank"
-          >on Github</a
-        >
-        and
-        <a href="https://sonjacodesmeteoapp.netlify.app/" target="_blank"
-          >hosted on Netlify</a
-        >
-      </footer>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="src/style.css" />
+  <title>Meteo App</title>
+</head>
+
+<body>
+  <div class="weather-app">
+    <header>
+      <form class="search-form">
+        <input type="search" placeholder="Enter a city..." required class="search-form-input" />
+        <input type="submit" value="search" class="search-form-button" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Zurich</h1>
+        <p>
+          Sunday 00:13, mostly sunny
+          <br />
+          Humidity: 49%, Wind: 5km/h SW
+        </p>
+      </div>
+      <div>☀️ 17°C</div>
+    </main>
+    <footer>
+      This project was coded with love by
+      <a href="https://github.com/SonjaCodes" target="_blank">Sonja Kolmer</a>
+      and is
+      <a href="https://github.com/SonjaCodes/meteo" target="_blank">on Github</a>
+      and
+      <a href="https://sonjacodesmeteoapp.netlify.app/" target="_blank">hosted on Netlify</a>
+    </footer>
+  </div>
+</body>
+
 </html>
