updated classes for main div h1 p and added css to those

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
       </form>
     </header>
     <main>
-      <div>
-        <h1>Zurich</h1>
-        <p>
-          Sunday 00:13, mostly sunny
-          <br />
-          Humidity: 49%, Wind: 5km/h SW
-        </p>
+      <div class="weather-app-data">
+        <div>
+          <h1 class="weather-app-city">Zurich</h1>
+          <p class="weather-app-details">
+            Sunday 00:13, mostly sunny
+            <br />
+            Humidity: 49%, Wind: 5km/h SW
+          </p>
+        </div>
+        <div class="weather-app-temperature">☀️ 17°C</div>
       </div>
-      <div>☀️ 17°C</div>
     </main>
     <footer>
       This project was coded with love by
