--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="weather-app-details">
             Sunday 00:13, mostly sunny
             <br />
-            Humidity: 49%, Wind: 5km/h SW
+            Humidity: <strong>49%</strong>, Wind: <strong>5km/h SW</strong>
           </p>
         </div>
         <div class="weather-app-temperature">☀️ 17°C</div>
