--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             Humidity: <strong>49%</strong>, Wind: <strong>5km/h SW</strong>
           </p>
         </div>
-        <div class="weather-app-temperature">☀️ 17°C</div>
-      </div>
+        <div class="weather-app-currently">
+          <div class="weather-app-icon">☀️</div>
+          <div class="weather-app-temperature">17</div>
+          <div class="weather-app-unit">°C</div>
+        </div>
     </main>
     <footer>
       This project was coded with love by
