--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
   <div class="weather-app">
     <header>
-      <form class="search-form">
-        <input type="search" placeholder="Enter a city..." required class="search-form-input" />
+      <form class="search-form" id="search-form">
+        <input type="search" placeholder="Enter a city..." required class="search-form-input" id="search-form-input" />
         <input type="submit" value="search" class="search-form-button" />
       </form>
     </header>
@@ -46,6 +46,7 @@
       <a href="https://sonjacodesmeteoapp.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
   </div>
+  <script src="src/index.js"></script>
 </body>
 
 </html>
