added further id's in html and function elements to JS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <div class="weather-app-data">
         <div>
-          <h1 class="weather-app-city">Zurich</h1>
+          <h1 class="weather-app-city" id="city">Zurich</h1>
           <p class="weather-app-details">
             Sunday 00:13, mostly sunny
             <br />
