--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
       <div class="weather-app-data">
         <div>
-          <h1 class="weather-app-city" id="city">Zurich</h1>
+          <h1 class="weather-app-city" id="city"></h1>
           <p class="weather-app-details">
             Sunday 00:13, mostly sunny
             <br />
@@ -34,7 +34,7 @@
         </div>
         <div class="weather-app-currently">
           <div class="weather-app-icon">☀️</div>
-          <div class="weather-app-temperature">17</div>
+          <div class="weather-app-temperature" id="temperature"></div>
           <div class="weather-app-unit">°C</div>
         </div>
     </main>
