added api data to condition description element

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div>
           <h1 class="weather-app-city" id="city"></h1>
           <p class="weather-app-details">
-            Sunday 00:13, mostly sunny
+            Sunday 00:13, <span id="description"></span>
             <br />
             Humidity: <strong>49%</strong>, Wind: <strong>5km/h SW</strong>
           </p>
