--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p class="weather-app-details">
             Sunday 00:13, <span id="description"></span>
             <br />
-            Humidity: <strong>49%</strong>, Wind: <strong>5km/h SW</strong>
+            Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
           </p>
         </div>
         <div class="weather-app-currently">
