--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       and is
       <a href="https://github.com/SonjaCodes/meteo" target="_blank">on Github</a>
       and
-      <a href="https://sonjacodesmeteoapp.netlify.app/" target="_blank">hosted on Netlify</a>
+      <a href="https://app.netlify.com/sites/sonjacodesmeteoapp/overview" target="_blank">hosted on Netlify</a>
     </footer>
   </div>
   <script src="src/index.js"></script>
